# Financial-Risk-Assessment-System

./: .gitignore  CONTRIBUTING.md  Dockerfile  ENHANCEMENTS.md  LICENSE  README.md  ReadMe.txt  docker-compose.yml  env_template.txt  requirements.txt  setup.cfg  setup.py  start.sh
.github/workflows/: ci.yml
project code/: Run.bat  Structure.txt  main.py  main.sql  run.py
project code/CSV/: credit_report.csv  mock_reports.csv  model_management.csv  rule_management.csv  users.csv
project code/Client/: user_management.db
project code/Client/CSV/: log_monitoring.csv  logs.csv  mock_reports.csv  model_management.csv  name_list.csv
project code/Client/controllers/: admin_controller.py  credit_report_controller.py  model_management_controller.py  risk_control_controller.py  user_controller.py
project code/Client/models/: credit_report_model.py  database.py  log_model.py  model_management_model.py  risk_control_model.py  user_model.py
project code/Client/utils/: helpers.py  logger.py  security.py
project code/Client/views/: ModelApprovalSuccessDialog.py  ModelCreationDialog.py  admin_window.py  login_window.py  user_info_window.py
project code/Client/views/tabs/: credit_report_tab.py  log_monitoring_tab.py  model_management_tab.py  risk_control_tab.py  user_management_tab.py
project code/config/: settings.py
tests/: __init__.py  test_security.py
