[metadata]
name = financial-risk-assessment-system
version = 2.0.0
description = Professional Financial Risk Assessment and Management System
long_description = file: README.md
long_description_content_type = text/markdown
author = ViktorFu
author_email = viktor@financial-risk-system.com
url = https://github.com/ViktorFu/Financial-Risk-Assessment-System
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    PyQt5>=5.15.0
    psycopg2-binary>=2.9.0
    pandas>=2.0.0
    numpy>=1.20.0
    bcrypt>=4.0.0
    cryptography>=40.0.0
    loguru>=0.7.0
    python-dotenv>=1.0.0
    pyyaml>=6.0.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-qt>=4.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.0.0
    pre-commit>=3.0.0
docs =
    sphinx>=7.0.0
    sphinx-rtd-theme>=1.3.0

[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
exclude = 
    .git,
    __pycache__,
    .pytest_cache,
    .venv,
    venv,
    build,
    dist,
    *.egg-info
per-file-ignores =
    __init__.py:F401

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    --verbose
    --tb=short
    --strict-markers
    --cov=project code/Client
    --cov-report=term-missing
    --cov-report=html:htmlcov
    --cov-report=xml
markers =
    unit: Unit tests
    integration: Integration tests
    security: Security tests
    performance: Performance tests

[coverage:run]
source = project code/Client
omit = 
    */tests/*
    */test_*
    */__pycache__/*
    */migrations/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod

[isort]
profile = black
multi_line_output = 3
line_length = 88
known_first_party = Client
known_third_party = PyQt5,pandas,numpy,bcrypt,cryptography,loguru,pytest
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
check_untyped_defs = True
warn_redundant_casts = True
warn_unused_ignores = True
show_error_codes = True
namespace_packages = True
explicit_package_bases = True

[mypy-PyQt5.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True 